Correção no título

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
     <div id="cabecalho" class="row">
         <div class="col text-center">
-            <p><strong>Avaliação C2</strong> - Ciência da Computação - FAESA 2020 <br><strong>Heleno Sales Mesquita</strong></p>
+            <strong>Heleno Sales Mesquita</strong> - <strong>Avaliação C2 DevWeb I</strong>
+            <p>Ciência da Computação - FAESA 2020 <br>Sistema de acompanhamento de casos de COVID-19</p>               
         </div>
     </div>
 
