--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <script src="views/pessoas-view.js"></script>
     <script src="controllers/pessoas-controller.js"></script>
     
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
