Correção do nome do diretório

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <script src="models/pessoa.js"></script>
     <script src="repositorio.js"></script>
 
-    <script src="views/pessoas-view.js"></script>
+    <script src="Views/pessoas-view.js"></script>
     <script src="controllers/pessoas-controller.js"></script>
     
     <script src="./main.js"></script>
